main.css
html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    max-width: 960px;
    margin: 0 auto;
    padding: 0 1em;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: #333;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
}

.container {
    line-height: 0.5;
}

.container h1 {
    font-weight: normal;
}

.picture img {
    display: block;
    margin: 0 auto 4em;
    max-width: 100%;
}

#banner {
    font-size: 2.5em;
    font-weight: bold;
}

